--- a/ios-developer.html
+++ b/ios-developer.html
@@ -48,7 +48,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/grow99/jobs/4479026002'>Job Application for Senior iOS Developer at Grow Mobility</a></h5> 
+<h5><a href='https://boards.greenhouse.io/grow99/jobs/4479026002'>Job Application for Senior iOS Developer at Grow Mobility</a></h5> 
 <p><span class="badge badge-light">Mexico City, Mexico</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -68,7 +68,7 @@
 <p><span class="badge badge-light">San Jose, California</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e575214'>Stellenangebot: iOS Developer (m/f/x), Berlin 100% ? dasauge? Stellenmarkt</a></h5> 
+<h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e575214'>Stellenangebot: iOS Developer (m/f/x), Berlin 100% ? dasauge? Stellenmarkt</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin</span></p>
 <p>Posted on:: 2019-10-25</p>
 <hr/>
@@ -125,7 +125,7 @@
 <p>Oct 6, 2019 ... As a Senior iOS Developer you will need to be: An expert in using Xcode, Git and 
 building continuous integration pipelines; Demonstrable mastery in the?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Cermaticom/743999697629039-ios-developer-senior-principal-senior-principal-position-'>Cermati.com IOS Developer (Senior, Principal, & Senior Principal Position) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Cermaticom/743999697629039-ios-developer-senior-principal-senior-principal-position-'>Cermati.com IOS Developer (Senior, Principal, & Senior Principal Position) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Jakarta Jakarta Jakarta, Indonesia  Indonesia</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
@@ -151,7 +151,7 @@ vehicle?...</p>
 <p><span class="badge badge-light">Denver, CO</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://nimble.recruitee.com/o/senior-ios-developer-7'>
+<h5><a href='https://nimble.recruitee.com/o/senior-ios-developer-7'>
       Senior iOS Developer - Nimble
     </a></h5> 
 <p><span class="badge badge-light">Vietnam</span></p>
@@ -253,7 +253,7 @@ vehicle?...</p>
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on:: 2019-10-15</p>
 <hr/>
-<h5><a href='https://devjobs.at/job/36023777108'>iOS Mobile Developer - devjobs.at</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://devjobs.at/job/36023777108'>iOS Mobile Developer - devjobs.at</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-15</p>
 <hr/>
@@ -269,7 +269,7 @@ vehicle?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-14</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/info-stretch-corporation/job/oQnAafwH'>Infostretch Corporation Careers - Senior iOS Developer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/info-stretch-corporation/job/oQnAafwH'>Infostretch Corporation Careers - Senior iOS Developer</a></h5> 
 <p><span class="badge badge-light">Santa Clara, CA  Redwood City</span></p>
 <p>Posted on: 2019-10-13</p>
 <hr/>
@@ -297,7 +297,7 @@ vehicle?...</p>
 <p><span class="badge badge-light">Santiago</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
-<h5><a href='https://touchbistro.applytojob.com/apply/wWY2O06LBA/Intermediate-IOS-Developer'>Intermediate iOS Developer - TouchBistro - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://touchbistro.applytojob.com/apply/wWY2O06LBA/Intermediate-IOS-Developer'>Intermediate iOS Developer - TouchBistro - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 1, 2019 ... Apply to Intermediate iOS Developer at TouchBistro in Toronto, Ontario, Canada.</p>
 <hr/>
@@ -329,7 +329,7 @@ vehicle?...</p>
 <p><span class="badge badge-light">Berlin  Berlin</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/FightCamp/743999696531726-ios-developer'>FightCamp iOS Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/FightCamp/743999696531726-ios-developer'>FightCamp iOS Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Costa Mesa, CA</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
@@ -447,7 +447,7 @@ automotive?...</p>
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-10-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/sumup/jobs/4457417002'>Job Application for iOS Developer at SumUp</a></h5> 
+<h5><a href='https://boards.greenhouse.io/sumup/jobs/4457417002'>Job Application for iOS Developer at SumUp</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-05</p>
 <hr/>
